--- a/android/res/layout/fragment_task_edit.xml
+++ b/android/res/layout/fragment_task_edit.xml
@@ -13,5 +13,19 @@
         android:layout_height="wrap_content"
         android:imeOptions="actionDone"
         android:inputType="text" />
+    
+    <Spinner
+        android:id="@+id/task_edit_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:prompt="@string/task_group"
+        android:spinnerMode="dialog" />
+    
+    <Spinner
+        android:id="@+id/task_edit_position"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:prompt="@string/task_position"
+        android:spinnerMode="dialog" />
 
 </LinearLayout>
