--- a/android/res/layout/fragment_task_edit.xml
+++ b/android/res/layout/fragment_task_edit.xml
@@ -11,7 +11,6 @@
         android:hint="@string/task_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:imeOptions="actionDone"
         android:inputType="text" />
     
     <Spinner
@@ -27,5 +26,13 @@
         android:layout_height="wrap_content"
         android:prompt="@string/task_position"
         android:spinnerMode="dialog" />
+    
+    <EditText
+        android:id="@+id/task_edit_description"
+        android:hint="@string/task_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:singleLine="false" />
 
 </LinearLayout>
