--- a/android/res/layout/fragment_task_edit.xml
+++ b/android/res/layout/fragment_task_edit.xml
@@ -32,7 +32,6 @@
         android:hint="@string/task_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:singleLine="false" />
+        android:inputType="textMultiLine" />
 
 </LinearLayout>
