--- a/android/res/layout/fragment_task_edit.xml
+++ b/android/res/layout/fragment_task_edit.xml
@@ -11,21 +11,10 @@
         android:hint="@string/task_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text" />
-    
-    <Spinner
-        android:id="@+id/task_edit_group"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:prompt="@string/task_group"
-        android:spinnerMode="dialog" />
-    
-    <Spinner
-        android:id="@+id/task_edit_position"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:prompt="@string/task_position"
-        android:spinnerMode="dialog" />
+        android:inputType="text">
+        
+        <requestFocus />
+    </EditText>
     
     <EditText
         android:id="@+id/task_edit_description"
@@ -33,5 +22,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine" />
+    
+    <!--<TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/task_group"
+        android:labelFor="@+id/task_edit_group" />-->
+    
+    <Spinner
+        android:id="@+id/task_edit_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dialog"
+        android:prompt="@string/task_group" />
+    
+    <!--<TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/task_position"
+        android:labelFor="@+id/task_edit_position" />-->
+    
+    <Spinner
+        android:id="@+id/task_edit_position"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dialog"
+        android:prompt="@string/task_position" />
 
 </LinearLayout>
