--- a/android/res/layout/fragment_task_list.xml
+++ b/android/res/layout/fragment_task_list.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
+        android:choiceMode="multipleChoice"
         android:drawSelectorOnTop="false" />
 
     <TextView
