work on TaskTimePicker

--- a/android/res/layout/fragment_task_edit.xml
+++ b/android/res/layout/fragment_task_edit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:taskTimePicker="http://schemas.android.com/apk/res/com.gawdl3y.android.tasktimer"
     android:id="@+id/task_edit"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -48,5 +49,11 @@
         android:layout_height="wrap_content"
         android:spinnerMode="dialog"
         android:prompt="@string/task_position" />
+    
+    <com.gawdl3y.android.tasktimer.layout.TaskTimePicker
+        android:id="@+id/task_edit_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        taskTimePicker:hours="0" />
 
 </LinearLayout>
