--- a/android/res/values/attrs.xml
+++ b/android/res/values/attrs.xml
@@ -3,10 +3,19 @@
     <attr name="tabStrip_text" format="reference" />
     <attr name="tabStrip_background" format="color" />
     
+    <attr name="taskTimePickerLayout" format="reference" />
+
+    <declare-styleable name="TaskTimePicker">
+        <attr name="hours" format="integer" />
+        <attr name="minutes" format="integer" />
+        <attr name="seconds" format="integer" />
+    </declare-styleable>
+    
     <attr name="ic_new_task" format="reference" />
     <attr name="ic_new_group" format="reference" />
     <attr name="ic_settings" format="reference" />
     <attr name="ic_about" format="reference" />
     <attr name="ic_start" format="reference" />
     <attr name="ic_pause" format="reference" />
+
 </resources>
