--- a/android/res/values/themes.xml
+++ b/android/res/values/themes.xml
@@ -34,5 +34,7 @@
         <item name="ic_start">@drawable/ic_av_play_light</item>
         <item name="ic_pause">@drawable/ic_av_pause_light</item>
     </style>
+    
+    <item name="taskTimePickerLayout" type="layout">@layout/task_time_picker</item>
 
 </resources>
