--- a/android/res/values-v11/themes.xml
+++ b/android/res/values-v11/themes.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="taskTimePickerLayout" type="layout">@layout/task_time_picker_holo</item>
+    <item name="timeAmountPickerLayout" type="layout">@layout/time_amount_picker_holo</item>
 </resources>
