added scrolling to and fixed width on group edit dialog

--- a/android/res/layout/fragment_group_edit.xml
+++ b/android/res/layout/fragment_group_edit.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/group_edit"
-    android:layout_width="wrap_content"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:orientation="vertical" >
+    android:layout_gravity="center">
     
-    <EditText
-        android:id="@+id/group_edit_name"
-        android:hint="@string/group_name"
+    <LinearLayout
+        android:id="@+id/group_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:imeOptions="actionDone"
-        android:inputType="text" />
-
-    <Spinner
-        android:id="@+id/group_edit_position"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:prompt="@string/group_position"
-        android:spinnerMode="dialog" />
-
-</LinearLayout>
+        android:layout_gravity="center"
+        android:orientation="vertical" >
+    
+	    <EditText
+	        android:id="@+id/group_edit_name"
+	        android:hint="@string/group_name"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:imeOptions="actionDone"
+	        android:inputType="text" />
+	
+	    <Spinner
+	        android:id="@+id/group_edit_position"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:prompt="@string/group_position"
+	        android:spinnerMode="dialog" />
+	
+	</LinearLayout>
+</ScrollView>
