--- a/android/res/layout/fragment_task_edit.xml
+++ b/android/res/layout/fragment_task_edit.xml
@@ -1,69 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:taskTimePicker="http://schemas.android.com/apk/res/com.gawdl3y.android.tasktimer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:layout_height="wrap_content">
     
     <LinearLayout
         android:id="@+id/task_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical" >
-
-        <EditText
-            android:id="@+id/task_edit_name"
+        android:orientation="vertical">
+        
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/task_name"
-            android:inputType="text" >
+            android:orientation="horizontal">
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/task_name"
+                style="TextAppearance.Edit_LabelSmall" />
+            <EditText
+	            android:id="@+id/task_edit_name"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:hint="@string/task_name"
+	            android:inputType="text">
+	
+	            <requestFocus />
+        	</EditText>
+        </LinearLayout>
 
-            <requestFocus />
-        </EditText>
-
-        <EditText
-            android:id="@+id/task_edit_description"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/task_description"
-            android:inputType="textMultiLine" />
+            android:orientation="horizontal">
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/task_description"
+                style="TextAppearance.Edit_LabelSmall" />
+	        <EditText
+	            android:id="@+id/task_edit_description"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:hint="@string/task_description"
+	            android:inputType="textMultiLine" />
+	    </LinearLayout>
 
-        <!--
-        <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/task_group"
-        android:labelFor="@+id/task_edit_group" />
-        -->
-
-        <Spinner
-            android:id="@+id/task_edit_group"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:prompt="@string/task_group"
-            android:spinnerMode="dialog" />
+            android:orientation="horizontal">
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/task_group"
+                style="TextAppearance.Edit_LabelSmall" />
+	        <Spinner
+	            android:id="@+id/task_edit_group"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:prompt="@string/task_group"
+	            android:spinnerMode="dialog" />
+	    </LinearLayout>
 
-        <!--
-        <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/task_position"
-        android:labelFor="@+id/task_edit_position" />
-        -->
-
-        <Spinner
-            android:id="@+id/task_edit_position"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:prompt="@string/task_position"
-            android:spinnerMode="dialog" />
-
-        <com.gawdl3y.android.tasktimer.layout.TimeAmountPicker
-            android:id="@+id/task_edit_time"
+            android:orientation="horizontal">
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/task_position"
+                style="TextAppearance.Edit_LabelSmall" />
+	        <Spinner
+	            android:id="@+id/task_edit_position"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:prompt="@string/task_position"
+	            android:spinnerMode="dialog" />
+	    </LinearLayout>
+	    
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            taskTimePicker:hours="0" />
+            android:orientation="horizontal">
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/task_time"
+                style="TextAppearance.Edit_LabelSmall" />
+	        <Button
+	            android:id="@+id/task_edit_time"
+	            android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:layout_marginLeft="0dip"
+                android:contentDescription="@string/task_time"
+                style="@style/TextAppearance.Edit_SpinnerButton" />
+	    </LinearLayout>
+	    
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/task_goal"
+                style="TextAppearance.Edit_LabelSmall" />
+	        <Button
+	            android:id="@+id/task_edit_goal"
+	            android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:layout_marginLeft="0dip"
+                android:contentDescription="@string/task_goal"
+                style="@style/TextAppearance.Edit_SpinnerButton" />
+	    </LinearLayout>
         
 	</LinearLayout>
 </ScrollView>
