--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -23,11 +23,55 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/abs__holo_blue_light</item>
     </style>
-    
     <style name="TabStrip.Text.Light" parent="@android:style/TextAppearance.Medium">
         <item name="android:textSize">12.0dip</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/abs__holo_blue_light</item>
+    </style>
+    
+    
+    <style name="TextAppearance" parent="android:TextAppearance">
+    </style>
+    
+	<style name="TextAppearance.Edit_LabelSmall" parent="TextAppearance.Edit_Small">
+        <item name="android:minHeight">24dip</item>
+        <item name="android:layout_width">144dip</item>
+        <item name="android:layout_marginLeft">16dip</item>
+        <item name="android:layout_marginRight">16dip</item>
+        <item name="android:paddingLeft">8dip</item>
+        <item name="android:paddingRight">8dip</item>
+        <item name="android:layout_marginBottom">-12dip</item>
+    </style>
+
+    <style name="TextAppearance.Edit_Small">
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#FFAAAAAA</item>
+    </style>
+    
+    <style name="TextAppearance.Edit">
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#FF333333</item>
+    </style>
+    
+    <style name="TextAppearance.Edit_Value" parent="TextAppearance.Edit">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_marginRight">12dip</item>
+        <item name="android:layout_marginLeft">12dip</item>
+    </style>
+    
+    <style name="TextAppearance.Edit_Spinner" parent="@style/Sherlock.__Widget.Holo.Spinner">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#FF333333</item>
+        <item name="android:layout_marginRight">12dp</item>
+        <item name="android:layout_marginLeft">12dp</item>
+    </style>
+
+    <style name="TextAppearance.Edit_SpinnerButton" parent="TextAppearance.Edit_Spinner">
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
     </style>
 
 </resources>
