--- a/android/res/values-v7/themes.xml
+++ b/android/res/values-v7/themes.xml
@@ -5,7 +5,7 @@
         <item name="tabStrip_text">@style/TabStrip.Text</item>
         <item name="tabStrip_background">@drawable/abs__ab_stacked_transparent_dark_holo</item>
         
-        <item name="timeAmountPickerLayout" type="layout">@layout/time_amount_picker</item>
+        <item name="timeAmountPickerLayout">@layout/time_amount_picker</item>
         
         <item name="ic_new_task">@drawable/ic_content_new_event_dark</item>
         <item name="ic_new_group">@drawable/ic_collections_new_label_dark</item>
@@ -19,7 +19,7 @@
         <item name="tabStrip_text">@style/TabStrip.Text.Light</item>
         <item name="tabStrip_background">@drawable/abs__ab_stacked_solid_light_holo</item>
         
-        <item name="timeAmountPickerLayout" type="layout">@layout/time_amount_picker</item>
+        <item name="timeAmountPickerLayout">@layout/time_amount_picker</item>
         
         <item name="ic_new_task">@drawable/ic_content_new_event_light</item>
         <item name="ic_new_group">@drawable/ic_collections_new_label_light</item>
@@ -33,7 +33,7 @@
         <item name="tabStrip_text">@style/TabStrip.Text</item>
         <item name="tabStrip_background">#ff555555</item>
         
-        <item name="timeAmountPickerLayout" type="layout">@layout/time_amount_picker</item>
+        <item name="timeAmountPickerLayout">@layout/time_amount_picker</item>
         
         <item name="ic_new_task">@drawable/ic_content_new_event_dark</item>
         <item name="ic_new_group">@drawable/ic_collections_new_label_dark</item>
