--- a/android/res/values/themes.xml
+++ b/android/res/values/themes.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <style name="Theme.Dark" parent="Theme.Sherlock">
+<resources>
+    
+    <style name="Theme.Dark" parent="@android:style/Theme.Holo">
         <item name="tabStrip_text">@style/TabStrip.Text</item>
-        <item name="tabStrip_background">@drawable/abs__ab_stacked_transparent_dark_holo</item>
-        
-        <item name="timeAmountPickerLayout">@layout/time_amount_picker</item>
-        
+        <item name="tabStrip_background">#ff555555</item>
+
+        <item name="drawer_shadow">@drawable/drawer_shadow_dark</item>
+
+        <item name="ic_drawer">@drawable/ic_drawer_light</item>
         <item name="ic_new_task">@drawable/ic_content_new_event_dark</item>
         <item name="ic_new_group">@drawable/ic_collections_new_label_dark</item>
         <item name="ic_settings">@drawable/ic_action_settings_dark</item>
@@ -15,32 +16,33 @@
         <item name="ic_pause">@drawable/ic_av_pause_dark</item>
     </style>
 
-    <style name="Theme.Light" parent="Theme.Sherlock.Light">
+    <style name="Theme.Light" parent="@android:style/Theme.Holo.Light">
         <item name="tabStrip_text">@style/TabStrip.Text.Light</item>
-        <item name="tabStrip_background">@drawable/abs__ab_stacked_solid_light_holo</item>
-        
-        <item name="timeAmountPickerLayout">@layout/time_amount_picker</item>
-        
+        <!--<item name="tabStrip_background">@android:drawable/ab_stacked_solid_light_holo</item>-->
+        <item name="tabStrip_background">#ff555555</item>
+
+        <item name="drawer_shadow">@drawable/drawer_shadow_light</item>
+
+        <item name="ic_drawer">@drawable/ic_drawer_light</item>
         <item name="ic_new_task">@drawable/ic_content_new_event_light</item>
         <item name="ic_new_group">@drawable/ic_collections_new_label_light</item>
-        <item name="ic_settings">@drawable/ic_action_settings_dark</item>
-        <item name="ic_about">@drawable/ic_action_about_dark</item>
+        <item name="ic_about">@drawable/ic_action_about_light</item>
         <item name="ic_start">@drawable/ic_av_play_light</item>
         <item name="ic_pause">@drawable/ic_av_pause_light</item>
     </style>
 
-    <style name="Theme.Light.DarkActionBar" parent="Theme.Sherlock.Light.DarkActionBar">
+    <style name="Theme.Light.DarkActionBar" parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <item name="tabStrip_text">@style/TabStrip.Text</item>
         <item name="tabStrip_background">#ff555555</item>
-        
-        <item name="timeAmountPickerLayout">@layout/time_amount_picker</item>
-        
+
+        <item name="drawer_shadow">@drawable/drawer_shadow_light</item>
+
+        <item name="ic_drawer">@drawable/ic_drawer_dark</item>
         <item name="ic_new_task">@drawable/ic_content_new_event_dark</item>
         <item name="ic_new_group">@drawable/ic_collections_new_label_dark</item>
-        <item name="ic_settings">@drawable/ic_action_settings_dark</item>
         <item name="ic_about">@drawable/ic_action_about_dark</item>
         <item name="ic_start">@drawable/ic_av_play_light</item>
         <item name="ic_pause">@drawable/ic_av_pause_light</item>
     </style>
-
+    
 </resources>
