--- a/android/TaskTimer/src/main/res/layout/fragment_groups.xml
+++ b/android/TaskTimer/src/main/res/layout/fragment_groups.xml
@@ -25,6 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/no_groups" />
+        android:text="@string/group_empty" />
 
 </LinearLayout>
