--- a/android/TaskTimer/src/main/res/layout/fragment_task_list.xml
+++ b/android/TaskTimer/src/main/res/layout/fragment_task_list.xml
@@ -24,6 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/no_tasks" />
+        android:text="@string/task_empty" />
 
 </LinearLayout>
