More work on ActionableListView and friends!

--- a/android/TaskTimer/src/main/res/layout/fragment_groups.xml
+++ b/android/TaskTimer/src/main/res/layout/fragment_groups.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <ListView
+    <com.gawdl3y.android.actionablelistview.ActionableListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
